--- a/w3/index.html
+++ b/w3/index.html
@@ -18,8 +18,8 @@
     //     console.log(response);
     //   }
     async function getAnimalData(){
-        const response = await fetch("https://fakerapi.it/api/v1/persons");
-        const data = await response.json();
+        const response = await fetch("https://fakerapi.it/api/v1/persons"); // returns a promise
+        const data = await response.json();  // returna a promise 
         console.log(data);
       }
     </script>
