--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -6,8 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
     <section>
@@ -26,6 +25,6 @@
         <h2 class="game--status"></h2>
         <button class="game--restart">Restart Game</button>
     </section>
-<script src="scripts/script.js"></script>
+<script src="./public/scripts/script.js"></script>
 </body>
 </html>
